# const-default-rs

./: Cargo.toml  LICENSE  README.md  lib.rs
derive/: Cargo.toml  lib.rs
tests/: derive.rs  trait_impls.rs
tools/: ci.rs
