[package]
name = "const_default_derive_2"
authors = ["Robin Freyler"]
version = "0.1.0"
edition = "2018"

description = "Proc. macro implementation of #[derive(ConstDefault)]"
documentation = "https://docs.rs/const-default-derive-2"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/AerialX/const-default.rs"

[lib]
name = "const_default_derive_2"
path = "lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = {version = "1", default-features = false, features = [
  "derive",
  "parsing",
  "proc-macro",
  "printing",
]}
proc-macro-crate = "1"

[dev-dependencies]
const_default_2 = { path = "..", features = ["derive"] }
