[package]
name = "const_default_derive"
authors = ["Robin Freyler"]
version = "0.1.0"
edition = "2018"

description = "Proc. macro implementation of #[derive(ConstDefault)]"
documentation = "https://docs.rs/const-default-derive-2"
license = "Apache-v2.0"
readme = "../README.md"
repository = "https://github.com/Robbepop/const-default-rs"

[lib]
name = "const_default_derive"
path = "lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = {version = "1", default-features = false, features = [
  "derive",
  "parsing",
  "proc-macro",
  "printing",
]}
proc-macro-crate = "1"

[dev-dependencies]
const_default = { path = "..", features = ["derive"] }
